--- a/RecupereJa/Views/Usuario/Perfil.cshtml
+++ b/RecupereJa/Views/Usuario/Perfil.cshtml
@@ -1,5 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Usuario";
 }
+
+<div class="text-center">
+    <h1 class="display-4">Tela do Perfil do usuário</h1>
+    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
