Preparando o terreno pra codar

--- a/RecupereJa/Views/Usuario/Login.cshtml
+++ b/RecupereJa/Views/Usuario/Login.cshtml
@@ -1,20 +1,4 @@
-﻿@{
-	ViewData["Title"] = "Login";
-}
-
-<div class="text-center">
-	<h1 class="display-4">Tela de login</h1>
-	<p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-<form>
-	<label>teste de label</label>
-	<br>
-	<input placeholder="Email">
-	<input placeholder="Senha">
-
-</form>
-
-@model web_tarefas.ViewModels.LoginViewModel
+﻿@model RecupereJa.ViewModels.LoginViewModel
 
 <div class="container">
     <h2>Login</h2>
