terreno mexido, proximo commit tera resolução de alguns bugs.

--- a/RecupereJa/Views/Tarefas/Edit.cshtml
+++ b/RecupereJa/Views/Tarefas/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model RecupereJa.ViewModels.TarefaViewModel
+﻿@using RecupereJa.Enums
+@model RecupereJa.ViewModels.TarefaViewModel
 
 @{
     ViewData["Title"] = "Editar Tarefa";
