--- a/RecupereJa/Views/Usuario/Login.cshtml
+++ b/RecupereJa/Views/Usuario/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@model RecupereJa.ViewModels.LoginViewModel
+﻿@* @model RecupereJa.ViewModel.LoginViewModel *@
+
+@model RecupereJa.ViewModel.LoginViewModel
 
 <div class="container">
     <h2>Login</h2>
