Cr7 = caça rato

--- a/RecupereJa/Views/Item/Details.cshtml
+++ b/RecupereJa/Views/Item/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model RecupereJa.ViewModels.TarefaViewModel
+﻿@model RecupereJa.ViewModels.ItemViewModel
 
 @{
     ViewData["Title"] = "Detalhes do item";
