--- a/RecupereJa/Views/Item/Index.cshtml
+++ b/RecupereJa/Views/Item/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<RecupereJa.ViewModels.TarefaViewModel>
+﻿@model IEnumerable<RecupereJa.ViewModels.ItemViewModel>
 
 @{
-    ViewData["Title"] = "Gerenciador de Tarefas";
+    ViewData["Title"] = "Gerenciador de Itens";
 }
 
 <div class="row">
