--- a/RecupereJa/Views/Item/Create.cshtml
+++ b/RecupereJa/Views/Item/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using RecupereJa.Enums
-@model RecupereJa.ViewModels.TarefaViewModel
+@model RecupereJa.ViewModels.ItemViewModel
 
 @{
     ViewData["Title"] = "Novo item";
