--- a/RecupereJa/Views/Item/Create.cshtml
+++ b/RecupereJa/Views/Item/Create.cshtml
@@ -33,6 +33,12 @@
                         <span asp-validation-for="DataEncontrado" class="text-danger"></span>
                     </div>
 
+@*                     <div class="mb-3">
+                        <label asp-for="ImagemObjeto" class="form-label"></label>
+                        <input asp-for="ImagemObjeto" class="form-control" placeholder="Adicione imagem do objeto" />
+                        <span asp-validation-for="Titulo" class="text-danger"></span>
+                    </div> *@
+
                     <div class="form-check mb-3">
                         <input asp-for="Status" class="form-check-input" type="checkbox" />
                         <label asp-for="Status" class="form-check-label"></label>
@@ -51,3 +57,4 @@
             </div>
         </div>
     </div>
+</div>
