--- a/RecupereJa/Views/Item/Delete.cshtml
+++ b/RecupereJa/Views/Item/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model RecupereJa.ViewModels.ItemViewModel
+﻿@model RecupereJa.ViewModel.ItemViewModel
 
 @{
     ViewData["Title"] = "Excluir item";
