--- a/RecupereJa/Views/Item/Edit.cshtml
+++ b/RecupereJa/Views/Item/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using RecupereJa.Enums
-@model RecupereJa.ViewModels.ItemViewModel
+@model RecupereJa.ViewModel.ItemViewModel
 
 @{
     ViewData["Title"] = "Editar Item";
