--- a/RecupereJa/Views/Item/Index.cshtml
+++ b/RecupereJa/Views/Item/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<RecupereJa.ViewModels.ItemViewModel>
+﻿@model IEnumerable<RecupereJa.ViewModel.ItemViewModel>
 
 @{
     ViewData["Title"] = "Gerenciador de Itens";
