--- a/RecupereJa/Views/Usuario/Registrar.cshtml
+++ b/RecupereJa/Views/Usuario/Registrar.cshtml
@@ -1,7 +1,10 @@
 ﻿@model RecupereJa.Models.Usuario
 
+
+
 @{
-	ViewBag.Title = "Registro de Usuário";
+    Layout = null;
+    ViewBag.Title = "Registro de Usuário";
 }
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -109,7 +112,7 @@
                 <h2><b>Faça seu cadastro</b></h2>
             </header>
 
-            <form>
+            <form asp-action="Registrar" asp-controller="Usuario" method="post" enctype="application/x-www-form-urlencoded">
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
 
@@ -134,7 +137,7 @@
                 <label for="reescritaSenha">Reescreva a senha:</label>
                 <input type="password" id="reescritaSenha" name="reescritaSenha" placeholder="Digite a senha novamente">
 
-                <button type="button" onclick="alert('Você concluiu seu cadastro')">Cadastrar</button>
+                <button type="submit" onclick="alert('Você concluiu seu cadastro')">Cadastrar</button>
             </form>
         </div>
     </div>
