Implementa autenticação com cookies e métodos assíncronos
Atualiza o controlador `UsuarioController` para suportar autenticação baseada em cookies, com métodos assíncronos para registro e login de usuários. Adiciona o método `BuscarPorIdentificadorSenhaAsync` na interface `IUsuarioRepositorio` para busca de usuários por identificador e senha. Modifica as views de login e registro para refletir as novas funcionalidades e melhorias de segurança.

--- a/RecupereJa/Views/Usuario/Login.cshtml
+++ b/RecupereJa/Views/Usuario/Login.cshtml
@@ -107,15 +107,19 @@
                 <h2><b>Login</b></h2>
             </header>
 
-            <form>
+            <<form asp-controller="Login" asp-action="Index" method="post">>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="exemplo@exemplo.com" required>
+                <input asp-for="Identificador " name="identificador" placeholder="Nome de usuário ou E-mail" required>
 
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
 
                 <button type="submit">Entrar</button>
             </form>
+            @if (ViewBag.Mensagem != null)
+            {   
+                <p style="color:red">@ViewBag.Mensagem</p>
+            }
         </div>
     </div>
 </body>
