--- a/RecupereJa/Views/Usuario/Registrar.cshtml
+++ b/RecupereJa/Views/Usuario/Registrar.cshtml
@@ -137,7 +137,7 @@
                 <label for="reescritaSenha">Reescreva a senha:</label>
                 <input type="password" id="reescritaSenha" name="reescritaSenha" placeholder="Digite a senha novamente">
 
-                <button type="submit" onclick="alert('Você concluiu seu cadastro')">Cadastrar</button>
+                <button type="submit" onclick="alert('Implementar SweetAlert2')">Cadastrar</button>
             </form>
         </div>
     </div>
